--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dev": "node -r dotenv/config .",
   "dependencies": {
     "ejs": "^3.1.3",
     "ejs-lint": "^1.1.0",
