--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "dotenv": "^8.2.0",
     "mongoose": "^5.9.15"
   },
   "devDependencies": {
